--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Shiwei Wu"
-description              : "I am now a master student in the School of Artificial Intelligence, Sun Yat-sen University(SYSU). I was supervised by Prof Zhenhui Peng. My main area of research is Generative AI for creativity, Human-AI collaboration and Visualization."
+description              : "School of Artificial Intelligence, Sun Yat-sen University(SYSU)"
 repository               : "https://github.com/ShionMing/"
 google_scholar_stats_use_cdn : true
 
