--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Shiwei Wu"
-description              : "School of Artificial Intelligence, Sun Yat-sen University(SYSU)"
+description              : "School of Artificial Intelligence"
 repository               : "https://github.com/ShionMing/"
 google_scholar_stats_use_cdn : true
 
